--- a/proyectoPrograSegura/proyectoPrograSegura/templates/envio.html
+++ b/proyectoPrograSegura/proyectoPrograSegura/templates/envio.html
@@ -3,18 +3,17 @@
 {% block titulo %}Analizador de código{% endblock %}
 {% block encabezado %}Inicio de sesión{% endblock %}
 {% block contenido %}
+{% if message %}
+<b>{{ message }}</b>
+{% endif %}
 
-
-<form method="POST" action="/login/">
+<form method="POST" action="">
   {% csrf_token %}
   <div class="mb-3 mt-3">
-    <label for="mensaje" class="form-label">Usuario:</label>
-    <input type="text" class="form-control" id="usuario" placeholder="Usuario" name="usuario">
-    <label for="mensaje" class="form-label">Contraseña:</label>
-    <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+    {{ form.as_p }}
   </div>
   <div class="mb-3 mt-3">
-    <input type="submit"/>
+    <input type="submit" value="Ingresar"/>
   </div>
   
 </form>
