Agregando la verificación de usario y contraseña en la función de login

--- a/proyectoPrograSegura/proyectoPrograSegura/templates/envio.html
+++ b/proyectoPrograSegura/proyectoPrograSegura/templates/envio.html
@@ -4,7 +4,7 @@
 {% block encabezado %}Inicio de sesión{% endblock %}
 {% block contenido %}
 {% if message %}
-<b>{{ message }}</b>
+<strong>{{ message }}</strong>
 {% endif %}
 
 <form method="POST" action="">
