--- a/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
+++ b/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
@@ -13,6 +13,10 @@
       <input type="text" class="form-control" id="usuario" placeholder="Usuario" name="usuario">
       <label for="mensaje" class="form-label">Contraseña:</label>
       <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+      <label for="mensaje" class="form-label">Token de Telegram</label>
+      <input type="text" class="form-control" id="token" placeholder="Token" name="token">
+      <label for="mensaje" class="form-label">ID del chat</label>
+      <input type="text" class="form-control" id="id_chat" placeholder="id_chat" name="id_chat">
     </div>
     <div class="mb-3 mt-3">
       <input type="submit" value="Registrar"/>
