--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/base.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/base.html
@@ -10,6 +10,8 @@
 				   initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
     {% block estilos %}{% endblock %}
@@ -26,11 +28,7 @@
     </header>
 
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-      <div class="container-fluid">
 
-      </div>
-    </nav>
 
     
     <section class="container">
