Tablas de maestros y alumnos

--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
@@ -17,6 +17,14 @@
       <input type="text" class="form-control" id="token" placeholder="Token" name="token">
       <label for="mensaje" class="form-label">ID del chat</label>
       <input type="text" class="form-control" id="id_chat" placeholder="id_chat" name="id_chat">
+      <label for="usuarios">Tipo de usuario</label>
+      <div>
+      <select name="tipo_usuario" id="tipo_usuario">
+          <option value="---">---</option>
+          <option value="alumno">Alumno</option>
+          <option value="maestro">Maestro</option>
+      </select>
+      </div>
     </div>
     <div class="mb-3 mt-3">
       <input type="submit" value="Registrar"/>
