--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/crear_tarea.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/crear_tarea.html
@@ -11,6 +11,9 @@
   <div class="mb-3 mt-3">
     {{ form.as_p }}
   </div>
+  <input type="file" name="script_comprobacion">
+  <input type="file" name="script_icializacion">
+  <input type="file" name="script_parametros">
   <div class="mb-3 mt-3">
     <input type="submit" value="Ingresar"/>
   </div>
