--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/base.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/base.html
@@ -27,7 +27,11 @@
       {% endif %}
     </header>
 
-
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+      <div class="container-fluid">
+        {% block contenido1 %}{% endblock %}
+      </div>
+    </nav>
 
 
     
