--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/registro.html
@@ -3,6 +3,18 @@
 {% block titulo %}Analizador de código{% endblock %}
 {% block encabezado %}Registro de usuarios{% endblock %}
 
+{% block contenido1 %}
+<div>
+  <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="/grupo">Crear Grupo</a></li>
+          <li><a href="/">Iniciar Sesión</a></li>
+        </ul>
+      </div>
+    </div>
+</div>
+{% endblock %}
 
 {% block contenido %}
 
