--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/home.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/home.html
@@ -2,5 +2,18 @@
 {% block titulo %}Analizador de código{% endblock %}
 {% block encabezado %}HOME{% endblock %}
 {% block contenido1 %}
+<div>
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a href="/crearTarea">Crear ejercicio</a></li>
+            <li><a href="/subir_tarea">Subir ejercicio</a></li>
+            <li><a href="/revisar_tarea">Revisar ejercicio</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span>LogOut</a></li>
+          </ul>
+        </div>
+      </div>
+</div>
 
 {% endblock %}
