--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/crear_tarea.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/crear_tarea.html
@@ -22,8 +22,11 @@
   <div class="mb-3 mt-3">
     {{ form.as_p }}
   </div>
+  <label for="mensaje" class="form-label">Script de comprobación: </label>
   <input type="file" name="script_comprobacion">
+  <label for="mensaje" class="form-label">Script de inicialización: </label>
   <input type="file" name="script_inicializacion">
+  <label for="mensaje" class="form-label">Script de Script de parametros: </label>
   <input type="file" name="script_parametros">
   <div class="mb-3 mt-3">
     <input type="submit" value="Ingresar"/>
