--- a/app/proyectoPrograSegura/proyectoPrograSegura/templates/subir_tarea.html
+++ b/app/proyectoPrograSegura/proyectoPrograSegura/templates/subir_tarea.html
@@ -44,10 +44,10 @@
         padding-top: 15px;
     }
 </style>
-
-
-
-
+<figure> 
+    <figcaption></figcaption> 
+    <table aria-describedby="mydesc">
+    <caption>
     <table>
         <tr>
             <th>Nombre del ejercicio</th>
@@ -71,8 +71,9 @@
                   </td>
             </tr>
         {% endfor %}
-    
+    </caption>
     </table>
+</figure>
 {% endblock %}
 
 
